--- a/css/style.css
+++ b/css/style.css
@@ -727,6 +727,12 @@ body.offcanvas {
       border-color: transparent transparent #4054b2 transparent; }
     .services.color-6 .icon:after {
       border-color: #4054b2 transparent transparent transparent; }
+  .services.color-7 .icon {
+    background: #117700; }
+  .services.color-7 .icon:before {
+    border-color: transparent transparent #117700 transparent; }
+  .services.color-7 .icon:after {
+    border-color: #117700 transparent transparent transparent; }
 
 .progress-wrap h3 {
   font-size: 16px;
